easier this way

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 munka.innerHTML += `
                 <div class="e">
                     <img src="${v.photo_url}" alt="">
-                    <div>
+                    <div class="rep">
                         <h1>${v.title}</h1>
                         <hr>
                         <h2>Témakörök</h2>
