--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <nav>
         <div class="logo"><img
                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQi1F68MYKAhP7fZ-JsiWwF2fQP9KK-fxELtlPide2Fgv0I0DTSHsSzPOPym_YWvg4Rirg&usqp=CAU">
+            <p class="folio">Portfolio</p>
         </div>
         <ul class="nav-links">
             <li><a href="#about">Rólam</a></li>
@@ -38,7 +39,7 @@
             <div class="col-right">
                 <h2>Orbán Viktor</h2>
 
-                <blockquote class="motto">Pénz pénz pénz pénzecske.</blockquote>
+                <blockquote class="motto">Pénz pénz pénz pénz pénzecske.</blockquote>
             </div>
 
 
@@ -83,7 +84,7 @@
     </section>
 
     <section id="work" class="work">
-        <h2>Munkáim</h2>
+        <h1 class="workh1">Munkáim</h1>
 
     </section>
 
