im close to ending it

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 </head>
 
 <body>
-
+    <!-- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQi1F68MYKAhP7fZ-JsiWwF2fQP9KK-fxELtlPide2Fgv0I0DTSHsSzPOPym_YWvg4Rirg&usqp=CAU"> -->
     <nav>
-        <div class="logo"><img
-                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQi1F68MYKAhP7fZ-JsiWwF2fQP9KK-fxELtlPide2Fgv0I0DTSHsSzPOPym_YWvg4Rirg&usqp=CAU">
+        <div class="logo">
+            <p class="logop">MK</p>
             <p class="folio">Portfolio</p>
         </div>
         <ul class="nav-links">
@@ -122,50 +122,14 @@
                 <div class="map">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2725.237729775272!2d19.685176676189467!3d46.91770787113487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4743da039cc46819%3A0x76e03484e50b2f33!2zS2Vjc2tlbcOpdGkgU1pDIEthbmTDsyBLw6FsbcOhbiBUZWNobmlrdW0!5e0!3m2!1sen!2shu!4v1736096931631!5m2!1sen!2shu"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        width="310" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
     </footer>
 
-    <script>
-        const src = "https://raw.githubusercontent.com/vw222-sch/portfolio/refs/heads/main/portfolio.json";
-        const munka = document.querySelector(".work");
-
-        async function fetchJson(url) {
-            const response = await fetch(url);
-            const jsonData = await response.json();
-            return jsonData;
-        }
-        async function main() {
-            let data = await fetchJson(src);
-
-            data.forEach(v => {
-                let lis = "";
-                v.topics.forEach(u => {
-                    lis += `<li>${u}</li>`;
-                })
-
-                munka.innerHTML += `
-                <div class="e">
-                    <img src="${v.photo_url}" alt="">
-                    <div class="rep">
-                        <h1>${v.title}</h1>
-                        <hr>
-                        <h2>Témakörök</h2>
-                        <ul>${lis}</ul>
-                        <div class="b">
-                            <a href="${v["repo-link"]}">Github link</a>
-                            <a href="${v["site-link"]}">Weboldal link</a>
-                        </div>
-                    </div>
-                </div>
-                `
-            })
-        }
-        main();
-    </script>
+    <script src="main.js"></script>
 </body>
 
 </html>
