--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <!-- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQi1F68MYKAhP7fZ-JsiWwF2fQP9KK-fxELtlPide2Fgv0I0DTSHsSzPOPym_YWvg4Rirg&usqp=CAU"> -->
+   
     <nav>
         <div class="logo">
             <p class="logop">MK</p>
@@ -33,13 +33,13 @@
     <section class="hero">
         <div class="hero-content">
             <div class="col-left">
-                <img src="https://www.tagesspiegel.de/images/12608081/alternates/BASE_1_1_W1000/1730135716000/viktor-orban.jpeg"
-                    alt="" class="hero-image">
+                <img src=""
+                    alt="" class="hero-image"> <!-- 500x500 -->
             </div>
             <div class="col-right">
-                <h2>Orbán Viktor</h2>
+                <h2>Mócza Krisztián</h2>
 
-                <blockquote class="motto">Pénz pénz pénz pénz pénzecske.</blockquote>
+                <blockquote class="motto">Nincs bug, csak dokumentálatlan funkció.</blockquote>
             </div>
 
 
