--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="hero">
         <div class="hero-content">
             <div class="col-left">
-                <img src=""
+                <img src="https://res.cloudinary.com/dimmnjecu/image/upload/v1743148765/20250328_085443_mdtgcz.jpg"
                     alt="" class="hero-image"> <!-- 500x500 -->
             </div>
             <div class="col-right">
